--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Engineer</h3>
             <p class="fst-italic">
-              <p>I am a current Bachelor of IT student, majoring in Software Engineering with experience in software and web development.
+              <p>I am a recent IT graduate, having majored in Software Engineering with experience in software and web development.
             I am fueled by my passion for coding and having a deaper understanding of how we can enhance as well as strengthen our way of life with the use of technology.
             I consider myself a never ending student always ready to learn and gain more knowledge.
             My never ending hunger for knowledge and personal improvement has led me to be succesful in my studies and personal life.
@@ -102,10 +102,9 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Resume</strong> <a href="https://www.canva.com/design/DAEfW5fPvDg/WKSlpdLooDcuy9Iz_0aEAw/edit">Click here</a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Linkedin</strong> <a href="https://www.linkedin.com/in/hilda-fleming/">Click here</a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Github</strong> <a href="https://github.com/HildaFleming" URL>Click here</a></li>
                 </ul>
