--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <h3>Software Engineer</h3>
             <p class="fst-italic">
               <p>I am a recent IT graduate, having majored in Software Engineering with experience in software and web development.
-            I am fueled by my passion for coding and having a deaper understanding of how we can enhance as well as strengthen our way of life with the use of technology.
+            I am constantly fueled by my passion for coding and having a deaper understanding of how we can enhance as well as strengthen our way of life with the use of technology.
             I consider myself a never ending student always ready to learn and gain more knowledge.
             My never ending hunger for knowledge and personal improvement has led me to be succesful in my studies and personal life.
             I am always looking for new and exciting projects that I can get stuck in and be a part of.</p>
